test/visibility/import/superDotModDotSuperDotModDotVar.good
superDotModDotSuperDotModDotVar.chpl:10: error: Cannot find symbol 'super' in module 'Mod'
